--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
     "scripts": {
-        "build": "esbuild app.tsx --bundle --outfile=justintimer.js",
+        "build": "esbuild app.tsx --bundle --sourcemap --outfile=dist/justintimer.js",
         "check": "yarn run tsc --noEmit"
     },
     "dependencies": {
+        "moment": "^2.29.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "styled-components": "^5.3.3"
     },
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
+        "@types/styled-components": "^5.1.15",
         "esbuild": "^0.13.12",
         "typescript": "^4.4.4"
     }
