--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
     "scripts": {
-        "build": "esbuild app.tsx --bundle --sourcemap --outfile=dist/justintimer.js",
+        "build": "esbuild app.tsx --target=es2015 --bundle --sourcemap --outfile=dist/justintimer.js",
         "check": "yarn run tsc --noEmit"
     },
     "dependencies": {
         "moment": "^2.29.1",
+        "prosemirror-example-setup": "^1.1.2",
+        "prosemirror-model": "^1.15.0",
+        "prosemirror-schema-basic": "^1.1.2",
+        "prosemirror-schema-list": "^1.1.6",
+        "prosemirror-state": "^1.3.4",
+        "prosemirror-view": "^1.21.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "styled-components": "^5.3.3"
     },
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
+        "@types/prosemirror-model": "^1.13.2",
+        "@types/prosemirror-schema-basic": "^1.0.2",
+        "@types/prosemirror-schema-list": "^1.0.3",
+        "@types/prosemirror-state": "^1.2.8",
+        "@types/prosemirror-view": "^1.19.1",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/styled-components": "^5.1.15",
