--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
+        "prebuild": "cp src/index.html dist/index.html",
         "build": "esbuild app.tsx --target=es2015 --bundle --sourcemap --outfile=dist/justintimer.js",
         "check": "yarn run tsc --noEmit",
         "bc": "parallel -- 'yarn run build --watch' 'yarn run check --watch' 'python -m SimpleHTTPServer'"
@@ -29,6 +30,7 @@
         "@types/react-dom": "^17.0.10",
         "@types/styled-components": "^5.1.15",
         "esbuild": "^0.13.12",
+        "parallel": "^1.2.0",
         "typescript": "^4.4.4"
     }
 }
