--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "compilerOptions": {
-        "jsx": "react"
+        "jsx": "react",
+        "baseUrl": "src",
+        "skipLibCheck": true
     },
+    "exclude": [
+        "node_modules",
+    ]
 }
