--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@types/howler": "^2.2.4",
         "howler": "^2.2.3",
+        "lodash-core": "^4.17.19",
         "moment": "^2.29.1",
         "prosemirror-example-setup": "^1.1.2",
         "prosemirror-model": "^1.15.0",
@@ -26,6 +27,7 @@
     },
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
+        "@types/lodash": "^4.14.192",
         "@types/prosemirror-model": "^1.13.2",
         "@types/prosemirror-schema-basic": "^1.0.2",
         "@types/prosemirror-schema-list": "^1.0.3",
