--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
     "scripts": {
         "build-static": "cp src/index.html assets/* dist/",
         "watch-static": "yarn run build-static; fswatch src/index.html assets/* | xargs -n1 -I{} yarn run build-static",
-        "build-js-dev": "esbuild src/app.tsx --target=es2015 --bundle --sourcemap --outfile=dist/justintimer.js",
-        "build-js-prod": "esbuild src/app.tsx --target=es2015 --bundle --minify --tree-shaking=true --outfile=dist/justintimer.js",
+        "build-js-dev": "yarn run esbuild src/app.tsx --target=es2015 --bundle --sourcemap --outfile=dist/justintimer.js",
+        "build-js-prod": "yarn run esbuild src/app.tsx --target=es2015 --bundle --minify --tree-shaking=true --outfile=dist/justintimer.js",
         "firebase": "firebase",
         "check": "yarn run tsc --noEmit",
         "watch": "yarn run concurrently 'yarn run check --watch' 'yarn run watch-static' 'yarn run build-js-dev --servedir=dist'",
         "test": "NODE_PATH=src jest",
-        "build-all": "rm -rf dist/*; yarn run build-static; yarn run build-js-prod",
+        "build-all": "yarn install; mkdir -p dist; rm -rf dist/*; yarn run build-static; yarn run build-js-prod",
         "deploy": "rsync --progress --delete -r dist/ justintimer.net:~/justintimer.net/public"
     },
     "dependencies": {
         "@types/howler": "^2.2.4",
         "firebase": "^10.13.2",
-        "firebase-tools": "^13.18.0",
         "howler": "^2.2.3",
         "lodash-core": "^4.17.19",
         "moment": "^2.29.1",
@@ -39,6 +38,7 @@
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/styled-components": "^5.1.15",
+        "firebase-tools": "^13.18.0",
         "concurrently": "^7.2.1",
         "esbuild": "^0.13.12",
         "jest": "^29.5.0",
