Fix parsing of empty values in round and exercise numbers.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,8 @@
     "compilerOptions": {
         "jsx": "react",
         "baseUrl": "src",
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "maxNodeModuleJsDepth": 0
     },
-    "exclude": [
-        "node_modules",
-    ]
+    "exclude": ["node_modules"]
 }
